1)Dal dan entity layere refranrs verdik. 2)Dal dan UI katmanına refarerans verdik. 3)Migration işlemini yaptım.

--- a/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
+++ b/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
@@ -12,5 +12,9 @@
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NTierCvProDataAccessLayer\NTierCvPro.DataAccessLayer.csproj" />
+  </ItemGroup>
   
 </Project>
