--- a/NTierCvProDataAccessLayer/NTierCvPro.DataAccessLayer.csproj
+++ b/NTierCvProDataAccessLayer/NTierCvPro.DataAccessLayer.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NTierCvProEntityLayer\NTierCvPro.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
