--- a/NTierCvPro.BusinessLayer/NTierCvPro.BusinessLayer.csproj
+++ b/NTierCvPro.BusinessLayer/NTierCvPro.BusinessLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NTierCvProEntityLayer\NTierCvPro.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
