1)Concrete klasörü altındaki maner sınıfları serviclerden implent oldu 2)Maneger sınıflarında veriye erişmek için artık DAL katmanı çağırıldı 3)Manager sınıflarında işlemi tamamlamak için UNIT OF WORK kullanıldı 4)Busniess'a Dal katmanı refrarans olarak eklendi.

--- a/NTierCvPro.BusinessLayer/NTierCvPro.BusinessLayer.csproj
+++ b/NTierCvPro.BusinessLayer/NTierCvPro.BusinessLayer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NTierCvProDataAccessLayer\NTierCvPro.DataAccessLayer.csproj" />
     <ProjectReference Include="..\NTierCvProEntityLayer\NTierCvPro.EntityLayer.csproj" />
   </ItemGroup>
 
