1)Busniees katmanı referans olarak eklendi. 2) Injection önlemek için startupa veriler eklendi.

--- a/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
+++ b/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NTierCvPro.BusinessLayer\NTierCvPro.BusinessLayer.csproj" />
     <ProjectReference Include="..\NTierCvProDataAccessLayer\NTierCvPro.DataAccessLayer.csproj" />
   </ItemGroup>
   
