1)Default controllerda sayfalar oluşturuldu 2)Default controllera özgü partial viewler oluşturuldu.

--- a/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
+++ b/NTierCvPro.WebUI/NTierCvPro.WebUI.csproj
@@ -17,11 +17,13 @@
     <PrivateAssets>all</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
   </PackageReference>
+  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NTierCvPro.BusinessLayer\NTierCvPro.BusinessLayer.csproj" />
     <ProjectReference Include="..\NTierCvProDataAccessLayer\NTierCvPro.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\NTierCvProEntityLayer\NTierCvPro.EntityLayer.csproj" />
   </ItemGroup>
   
 </Project>
